--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -15,6 +15,7 @@
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/card";
 @import "bootstrap/scss/close";
+@import "bootstrap/scss/badge";
 
 // Helpers
 @import "bootstrap/scss/helpers";
@@ -29,3 +30,10 @@ html {
 body {
     font-size: 100%;
 }
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .3s;
+  }
+  .fade-enter, .fade-leave-to /* .fade-leave-active em versões anteriores a 2.1.8 */ {
+    opacity: 0;
+  }
